<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowish"
    tools:context=".Login">

     <TextView
         android:id="@+id/login_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:background="@color/colorPrimaryDark"
         android:fontFamily="cursive"
         android:gravity="center"
         android:padding="4dp"
         android:text="@string/login"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         tools:ignore="UnusedAttribute" />
        <!-- -->

    <LinearLayout
        android:id="@+id/id_L"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_header"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:text="@string/id_code"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/id_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/crd_phn_hint"
            android:inputType="number"

            android:padding="4dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/pass_L"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_L"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"

        android:orientation="vertical"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/password"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/password_et"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="8dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_L"
        android:layout_centerHorizontal="true"
        android:layout_margin="100dp"
        android:onClick="logInDataReceived"
        android:padding="8dp"
        android:text="@string/send"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/iimcal"
        android:textColor="#454545"
        android:textSize="12dp" />


</RelativeLayout>