<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowish"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".DigitalTLM">
    <TextView
        android:id="@+id/digital_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="cursive"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/digital"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute" />
        <ImageButton
        android:id="@+id/back_button2"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="8dp"


        android:contentDescription="@string/back"
        android:src="@mipmap/back" />
        <!--android:onClick="moveToOptions"-->
    <LinearLayout
        android:id="@+id/class_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/digital_header"
            android:gravity="center_horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_ma"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            />
        <Spinner
            android:id="@+id/class_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/class_array">

        </Spinner>
    </LinearLayout>
    <LinearLayout
                android:id="@+id/subject_topic_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/class_ll"
                android:gravity="center_horizontal"
                android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject_ma"
                android:textColor="@color/colorSecondary"
                android:textSize="16sp"
                />
            <Spinner
                android:id="@+id/subject_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/subject_array">

            </Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_digi"
                android:textColor="@color/colorSecondary"
                android:textSize="16sp"
                />
            <Spinner
                android:id="@+id/topic_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/topic_array">

            </Spinner>
    </LinearLayout>

    <Button
        android:id="@+id/confirm_digi"
        android:layout_width="100dp"

        android:layout_height="wrap_content"
        android:layout_below="@id/subject_topic_ll"
        android:layout_centerHorizontal="true"
        android:clickable="true"

        android:focusable="true"
        android:text="@string/confirm" />
    <!--android:onClick="displayLessonPlan"-->
    <TextView
        android:id="@+id/Hlesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_digi"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/lesson_plan"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        />

    <LinearLayout
        android:id="@+id/my_linear_view"
        android:layout_width="368dp"
        android:layout_height="240dp"
        android:layout_below="@id/Hlesson"
        android:layout_marginBottom="8dp"
        android:background="@color/bluish"
        android:orientation="vertical"
        android:scrollbars="vertical">
    </LinearLayout>
    <TextView
        android:id="@+id/hdownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_linear_view"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/download"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        />
    <Button
        android:id="@+id/ppt_btn"
        android:layout_width="100dp"


        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/hdownload"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:clickable="true"

        android:focusable="true"
        android:text="@string/ppt" />
    <Button
        android:id="@+id/worksheet_btn"
        android:layout_width="108dp"

        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/hdownload"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:clickable="true"

        android:focusable="true"
        android:text="@string/worksheet" />
</RelativeLayout>