<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splashscreen"

    tools:context=".Activity.TrainingNeeds">
    <TextView
        android:id="@+id/training_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/primary"
        android:fontFamily="serif"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/train2"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
         />
    <ImageButton
        android:id="@+id/back_button2"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:clickable="true"
        android:focusable="true"
        android:onClick="moveToOptions"
        android:contentDescription="@string/back"
        android:src="@mipmap/back" />

    <EditText
        android:id="@+id/needs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/training_header"
        android:hint="@string/ask_need"/>
    <Button
        android:id="@+id/post"
        android:layout_width="100dp"

        android:layout_height="wrap_content"
        android:layout_below="@id/needs"
        android:layout_centerHorizontal="true"
        android:clickable="true"

        android:focusable="true"
        android:text="@string/post" />



    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/post"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/course_schedule"
        android:textColor="@color/primary_dark"
        android:textSize="24sp"
        />

    <!--<LinearLayout
        android:id="@+id/my_details_view"
        android:layout_width="368dp"
        android:layout_height="272dp"
        android:layout_below="@id/details"
        android:layout_marginBottom="8dp"
        android:background="@color/bluish"
        android:orientation="vertical"
        android:scrollbars="vertical">
    </LinearLayout>-->
    <fragment
        android:id="@+id/my_details_view"
        android:name="com.example.newu.attendancetaker.Fragments.LessonPlanFragment"
        android:layout_width="368dp"
        android:layout_height="272dp"
        android:layout_below="@id/details"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="4dp"
        android:layout_weight="2"/>

    <Button
        android:id="@+id/course_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/my_details_view"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="displayCourseContents"
        android:text="@string/course" />
    <Button
        android:id="@+id/schedule_btn"
        android:layout_width="108dp"

        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/my_details_view"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="displaySchedule"
        android:text="@string/schedule" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:text="@string/contact_admin"
        android:textSize="16sp"/>

    <!--android:onClick="displayLessonPlan"-->
</RelativeLayout>

<!--
<RadioGroup
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:id="@+id/subject_ll1"
android:layout_below="@id/training_header"
android:layout_centerHorizontal="true">
<RadioButton
    android:id="@+id/subj1_rb"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="onRadioButtonClicked"
    android:text="@string/subject_name_1"
    android:textColor="@color/colorSecondary"
    android:textSize="16sp">

</RadioButton>
<RadioButton
    android:id="@+id/subj2_rb"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="onRadioButtonClicked"
    android:text="@string/subject_name_2"
    android:textColor="@color/colorSecondary"
    android:textSize="16sp">
</RadioButton>
</RadioGroup>-->
