<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splashscreen"
    tools:context=".SplashScreen"
    >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/image"
        android:src="@mipmap/splashlogo"
        android:tintMode="src_over"/>

    <TextView
        android:id="@+id/App_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/accent"
        android:textSize="30sp"
        android:shadowColor="@color/bluish"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/iimcal"
        android:textColor="#454545"
        android:textSize="12sp" />
</RelativeLayout>