<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="#f8f9e5">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:layout_margin="8dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/attendance"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute" />
    <ImageButton
        android:id="@+id/back_button2"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/back"

        android:onClick="moveToOptions"
        android:src="@mipmap/back" />

   <LinearLayout
        android:id="@+id/extra_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="vertical">

        <TextView
            android:id="@+id/school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="Simple application that shows how to use marquee, with a long text"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            />
    </LinearLayout>

   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hcol"
        android:layout_below="@+id/extra_details"
        android:layout_marginTop="4dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Hroll"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/roll"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Hname"

            android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"
            android:layout_toEndOf="@id/Hroll"
            android:layout_toLeftOf="@id/Hstatus"

            android:layout_toRightOf="@id/Hroll"
            android:layout_toStartOf="@id/Hstatus"
            android:text="@string/name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Hstatus"
            android:layout_toLeftOf="@id/status_check"
            android:layout_toStartOf="@id/status_check"
            android:text="@string/status"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            />
       <CheckBox
           android:id="@+id/status_check"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentEnd="true"
           android:layout_alignParentRight="true"
           android:layout_marginEnd="16dp"
           android:layout_marginRight="16dp"
           android:clickable="true"
           android:focusable="true"
           android:onClick="refreshAttendance"
           />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="368dp"
        android:layout_height="352dp"
        android:layout_below="@id/hcol"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_recycler_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:onClick="sendToDB"
        android:text="@string/send"
        />

    <!--<Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_recycler_view"
        android:layout_toLeftOf="@id/send_button"
        android:layout_toStartOf="@id/send_button"
        android:layout_toRightOf="@id/back_button"
        android:layout_toEndOf="@id/back_button"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/refresh"
        android:onClick="refreshAttendance"/>

    -->


</RelativeLayout>